spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-k8s-client-discovery-server/src/test/resources/client/spring-cloud-kubernetes-discoveryclient-it-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-kubernetes-k8s-client-discovery-server-deployment
spec:
  selector:
    matchLabels:
      app: spring-cloud-kubernetes-k8s-client-discovery-server
  template:
    metadata:
      labels:
        app: spring-cloud-kubernetes-k8s-client-discovery-server
    spec:
      serviceAccountName: spring-cloud-kubernetes-serviceaccount
      containers:
        - name: spring-cloud-kubernetes-k8s-client-discovery-server
          image: docker.io/springcloud/spring-cloud-kubernetes-k8s-client-discovery-server
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              port: 8080
              path: /discoveryclient-it/actuator/health/readiness
            initialDelaySeconds: 10
            periodSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              port: 8080
              path: /discoveryclient-it/actuator/health/liveness
            initialDelaySeconds: 10
            periodSeconds: 2
            failureThreshold: 3
          env:
            - name: SPRING_CLOUD_KUBERNETES_DISCOVERY_CATALOGSERVICESWATCHDELAY
              value: "3000"
          ports:
            - containerPort: 8080
