spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-k8s-client-discovery-server/src/test/resources/client/spring-cloud-kubernetes-discoveryclient-it-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /discoveryclient-it
            pathType: Prefix
            backend:
              service:
                name: spring-cloud-kubernetes-k8s-client-discovery-server
                port:
                  number: 8080
